appservices/domain/multiversion/alpha/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alpha
    version: v1
  name: alpha-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha
      version: v1
  template:
    metadata:
      labels:
        app: alpha
        version: v1
    spec:
      containers:
      - image: riveryc/app:v0.0.1
        name: alpha
        ports:
        - containerPort: 8000
