appservices/domain/multiversion/alpha/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alpha
    version: v2
  name: alpha-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha
      version: v2
  template:
    metadata:
      labels:
        app: alpha
        version: v2
    spec:
      containers:
      - image: riveryc/app:v0.0.1
        name: alpha
        ports:
        - containerPort: 8000
