appservices/domain/multiversion/alpha/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alpha
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: alpha
